clusters/sirius/apps/kestra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kestra
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: kestra
